[2025-12-27T02:11:03.800Z] BACKUP: Fichier créé: strapi-backup-2025-12-27T02-11-03-778Z.db.tar.gz
[2025-12-28T11:45:27.902Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T11-45-27-879Z.db.tar.gz
[2025-12-28T12:08:22.688Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T12-08-22-670Z.db.tar.gz
[2025-12-28T12:15:42.067Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T12-15-42-051Z.db.tar.gz