@@ -2,3 +2,4 @@
 [2025-12-28T11:45:27.902Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T11-45-27-879Z.db.tar.gz
 [2025-12-28T12:08:22.688Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T12-08-22-670Z.db.tar.gz
 [2025-12-28T12:15:42.067Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T12-15-42-051Z.db.tar.gz
+[2025-12-28T12:31:22.214Z] BACKUP: Fichier créé: strapi-backup-2025-12-28T12-31-22-195Z.db.tar.gz
